[Implement] Removed different versions of hl7 (Will support only one of the latest versions).  Added definitions for some hl7 segments (v2.6).

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "health-level-seven-parser",
-  "version": "1.1.53",
-  "description": "Typescript library to parse hl7 message into a typescript object and back",
+  "version": "1.2.0",
+  "description": "Typescript library to parse hl7 message into a typescript/javascript object and back",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
