--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,8 @@
         "sourceMap": false,
         "declaration": true,
         "outDir": "./dist"
-    }
+    },
+    "lib": [
+        "dom",
+        "es7"]
 }
