--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,11 @@
     },
     "lib": [
         "dom",
-        "es7"]
+        "es7"
+    ],
+    "exclude":[
+        "./spec/**/*",
+        "node_modules",
+        "lib"
+    ]
 }
