--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "health-level-seven-parser",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Typescript library to parse hl7 message into a typescript/javascript object and back",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "run": "ts-node ./src/index.ts",
     "prepublishOnly": "tsc -p ./ --outDir ./dist/",
-    "test": "jasmine-ts \"spec/**/*.spec.ts\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,12 +26,12 @@
     "url": "https://github.com/GoygovRustam/HL7Parser/issues"
   },
   "homepage": "https://github.com/GoygovRustam/HL7Parser#readme",
-  "dependencies": {},
   "devDependencies": {
-    "@types/jasmine": "^2.8.2",
-    "@types/node": "^8.0.53",
-    "jasmine-ts": "^0.2.1",
-    "ts-node": "^3.3.0",
-    "typescript": "^2.6.1"
+    "@types/jest": "^28.1.7",
+    "@types/node": "^18.7.9",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
